--- a/Code/Portfolio/code.html
+++ b/Code/Portfolio/code.html
@@ -20,8 +20,8 @@
             <hr>
             <div class="social-media">
                 <h2>Connect with me</h2>
-                <a href="https://x.com/home">Twitter</a>
-                <a href="https://www.linkedin.com/feed/">LinkedIn</a>
+                <a href="https://x.com/thenainsrishti">Twitter</a>
+                <a href="https://www.linkedin.com/in/nainsrishti-singh/">LinkedIn</a>
                 <a href="https://github.com/">GitHub</a>
 
             </div>
